VR: Fix initial visibility of WebVR splash screen elements.

In tests and testapp situations, the default UI should be a non-WebVR, browser
environment, based on the default initial state.  However, some elements
were visible by default, causing the first frame to show them in lieu of
expected elements.

BUG=783975

Change-Id: Id2b3008a9886d96df953fbe19da6d9a877601e01